--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 	<link rel='icon' type='image/png' href='./img/favicon.png'>
 	<link rel='stylesheet' href='./css/global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
+    <link rek='stylesheet' href='./build/bigger-picture.css'>
 	<script defer src='./build/bundle.js'></script>
 </head>
 <body>
