Hover Animations And Parallax Stuff 	modified:   public/css/content/about.css 	modified:   public/css/content/contact.css 	modified:   public/css/global.css 	modified:   public/css/root.css 	modified:   public/index.html 	modified:   rollup.config.js 	modified:   src/App.svelte 	modified:   src/Burger.svelte 	modified:   src/Figure.svelte 	new file:   src/Parallax.svelte 	modified:   src/Slider.svelte 	modified:   src/english/English.svelte

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html lang="en de bg">
+<!--[if lt IE 7]>      <html class='no-js lt-ie9 lt-ie8 lt-ie7'> <![endif]-->
+<!--[if IE 7]>         <html class='no-js lt-ie9 lt-ie8'> <![endif]-->
+<!--[if IE 8]>         <html class='no-js lt-ie9'> <![endif]-->
+<!--[if gt IE 8]>      <html class='no-js'> <!--<![endif]-->
+<html lang='en de bg'>
 <head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1,minimum-scale=1'>
-	<title>Boris Kostadinov</title>
-	<link rel='icon' type='image/png' href='./img/favicon.png'>
-	<link rel='stylesheet' href='./css/global.css'>
-	<link rel='stylesheet' href='./build/bundle.css'>
-    <link rek='stylesheet' href='./build/bigger-picture.css'>
-	<script defer src='./build/bundle.js'></script>
+<meta charset='utf-8'>
+<meta http-equiv='X-UA-Compatible' content='IE=edge'>
+<meta name='viewport' content='width=device-width,initial-scale=1,minimum-scale=1'>
+<meta name='description' content='Boris Kostadinov is a musician, multimedia-designer and programmer from Vienna.'>
+<title>Boris Kostadinov</title>
+<link rel='icon' type='image/png' href='./img/favicon.png'>
+<link rel='stylesheet' href='./css/global.css'>
+<link rel='stylesheet' href='./build/bundle.css'>
+<script defer src='./build/bundle.js'></script>
 </head>
 <body>
+<!--[if lt IE 7]>
+<p class='browsehappy'>You are using an <strong>outdated</strong> browser. Please <a href='#''>upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
 </body>
 </html>
